BP: overflow:auto changed to overflow:hidden for .serendipity_Entry_Date and.serendipity_commentBody due to firefox horizontal line bug.

--- a/templates/bulletproof/base.css
+++ b/templates/bulletproof/base.css
@@ -192,7 +192,7 @@ body {
 
 .serendipity_Entry_Date,
 .serendipity_commentBody {
-    overflow: auto;
+    overflow: hidden;
 }
 
 .serendipitySideBarContent input,
